# ibus

./: configure.ac
client/wayland/: Makefile.am  main.c
client/x11/: main.c
